<resources>
    <string name="app_name">Stevedoring Cockpit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rigcode_pt">Destination: </string>
    <string name="priority_pt">Vessel: </string>
    <string name="date_pt">Date: </string>
    <string name="time_pt">Time: </string>

    <string name="select_vehicle">Select Vehicle</string>
    <string name="select_driver">Select Driver</string>

    <integer name="swing_anim_time">750</integer>
    <string name="transition_string">hello</string>


    <string name="login_app_header">Mobile Portal Login</string>
    <string name="Login_Error_msg">Authentication failed </string>
    <string name="Login_Empty_Error_msg">Please fill all the fields </string>
    <string name="Login_Button">Login</string>
    <string name="id_hint">Aramco ID</string>
    <string name="password_hint">Password</string>
    <string name="Login_legaltext">" Saudi Aramco reserves the right to monitor all Website activity, traffic,computing,network, access, and content transmitted using the Website"</string>


    <!-- Strings related to login -->
    <string name="OfflineLoginError">User ID not found please login online first</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_agent">Mozilla/5.0 (Linux; U; Android 3.0; en-us; Xoom Build/HRI39) AppleWebKit/534.13 (KHTML, like Gecko) Version/4.0 Safari/534.13</string>
    <string name="Content_Type">application/json; charset=utf-8</string>
    <string name="accept">application/json</string>
    <string name="portal">https://qp1.aramco.com.sa/</string>
    <string name="sapclient_25">025</string>
    <string name="sapclient_222">222</string>

    <string name="SharedPrefName">Settings</string>




    <!-- TestLinks   -->

<!--    <string name="dvcURL">https://dvc.aramco.com.sa:1443/sap/opu/odata/sap/ZU_UPHR_MAIN_SRV/</string>-->
<!--    <string name="portalURL">https://dp4.aramco.com.sa/</string>-->


<!--      ProductionLinks-->
  <string name="dvcURL">https://prcwd.aramco.com.sa:44505/sap/opu/odata/sap/ZU_UPHR_MAIN_SRV/</string>
    <string name="portalURL">https://myhome.aramco.com.sa/</string>


    <string name="Online">Online</string>
    <string name="Offline">Offline</string>
    <string name="UserMode">UsageMode</string>
    <string name="UserInfo">UserInfo</string>
    <string name="vehiclesText">Vehicles: </string>
    <string name="quantity">Quantity: </string>
    <string name="dialogHeader">Choose Vehicle and Loaders</string>
    <string name="vehiclesList">Vehicles and Loaders</string>
    <string name="chosenList">Chosen</string>
    <string name="status">Status: </string>
    <string name="load">LOAD</string>
    <string name="unload">UNLOAD</string>
    <string name="process">PROCESS</string>
    <string name="notFound">NOT FOUND</string>
    <string name="loaders">Loaders: </string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="destination">Destination: </string>
    <string name="vessel">Vessel: </string>
    <string name="LoadingData">Loading Plans</string>
    <string name="offine_window_title">Offline Assigment items</string>
    <string name="Offline_items_DispatchAll">Dispatch All</string>
    <string name="Offline_items_ClearAll">Clear All</string>
    <string name="Lpid">Plan ID</string>
    <string name="VehAssginVeachileName">Vechicle Name</string>
    <string name="VehAssginDriverName">Driver Name</string>
    <string name="PlanNumber">Plan Number</string>
    <string name="MatrialNumber">Matrial Number</string>
    <string name="offine_window_titleLoader" >Offline Loader items</string>
    <string name="VehAssginLoaderStatus">Loader Status</string>
    <string name="Offline_items_ChangeStatusAll">Change Status All</string>

</resources>