<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.09"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/offine_window_titleLoader"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/closeBtn"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_weight="1"
        android:background="@drawable/border" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/ChangeStatusAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:backgroundTint="@color/SA_Light_Green"
            android:text="@string/Offline_items_ChangeStatusAll" />


        <Button
            android:id="@+id/ClearAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:backgroundTint="@color/lightRed"
            android:text="@string/Offline_items_ClearAll" />
    </LinearLayout>

</LinearLayout>