<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name = "mat"
            type= "com.example.listing.models.Material"
            />

        <variable
            name="loadClickListen"
            type="com.example.listing.LoadButtonClicked" />

        <variable
            name="pos"
            type="int"
            />

        <variable
            name="unloadClickListen"
            type="com.example.listing.UnloadButtonClicked"
            />

        <variable
            name="prcClickListen"
            type="com.example.listing.PrcButtonClicked"
            />

        <variable
            name="foundClickListen"
            type="com.example.listing.FoundButtonClicked" />

        <variable
            name="noteClickListen"
            type="com.example.listing.NoteButtonClicked"
            />



    </data>


<androidx.cardview.widget.CardView
    android:layout_width="320dp"
    android:layout_height="175dp"
    android:layout_marginBottom="8dp"
    android:transitionName="@string/transition_string">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/material_img_card"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/defult"
                android:scaleType="fitXY"
                />

            <Button
                android:id="@+id/found_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="#EFCAC7"
                android:gravity="center"
                android:layout_gravity="center"
                android:onClick="@{() -> foundClickListen.foundButtonClicked(pos)}"
                android:text="@string/notFound"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="3dp">



            <TextView
                android:id="@+id/material_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{mat.zuphrShortxt}"
                android:textColor="@color/SADarkGreen"
                android:textSize="18sp" />

            <View
                android:id="@+id/view"
                android:layout_width="165dp"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@android:color/darker_gray"
                android:backgroundTint="@color/SADarkGreen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/status_pt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="5"
                    android:layout_marginStart="3dp"
                    android:gravity="center"

                    android:text="@{mat.zuphrLoada.status}"
                    android:textSize="14sp"
                    android:layout_marginTop="2dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_weight="0.4">

                <Button
                    android:id="@+id/load_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="0.5"
                    android:background="@color/SaDarkGray"
                    android:onClick="@{() -> loadClickListen.loadButtonClick(pos)}"
                    android:text="@string/load"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="3dp"/>

                <Button
                    android:id="@+id/unload_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/twentyfivGray"
                    android:onClick="@{() -> unloadClickListen.unloadButtonClicked(pos)}"
                    android:text="@string/unload"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_weight="0.5"
                    android:layout_marginTop="3dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="2dp"
                android:layout_weight="0.4"
                >

                <Button
                    android:id="@+id/process_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@color/SaDarkGray"
                    android:onClick="@{() -> prcClickListen.PrcButtonClicked(pos)}"
                    android:text="@string/process"
                    android:layout_marginEnd="12dp"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ImageView

                    android:id="@+id/comment_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_comment"
                    android:onClick="@{() -> noteClickListen.noteButtonClicked(pos)}" />

                <ImageView
                    android:id="@+id/location_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    android:layout_gravity="center"

                    android:background="@drawable/ic_baseline_location_on_40" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
</layout>