<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="plan"
            type="com.example.listing.models.Plan" />

        <variable
            name="itemClickListener"
            type="com.example.listing.PlanClickListener" />

        <variable
            name="pos"
            type="int" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:onClick="@{() -> itemClickListener.onItemClick(plan, pos)}"
        android:layout_margin="2.8dp"
        app:contentPaddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/reqName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:text="@{plan.zuphrLpname}"
                android:textColor="@color/SADarkBlue"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@android:color/darker_gray"
                android:backgroundTint="@color/SADarkGreen" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/pt_rigcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rigcode_pt"
                    android:textColor="@color/SaLightGreen"
                    android:textSize="@dimen/list_card_tv_size"
                    android:layout_weight="0.2"/>

                <TextView
                    android:id="@+id/rigcode_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="4dp"
                    android:ems="6"
                    android:text="@{plan.zuphrLpid}"
                    android:textColor="@color/SaDarkGray"
                    android:layout_weight="0.8"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/pt_vessel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_pt"
                    android:textColor="@color/SaLightGreen"
                    android:textSize="@dimen/list_card_tv_size" />

                <TextView
                    android:id="@+id/vessel_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="4dp"
                    android:ems="7"
                    android:text="@{plan.zuphrVesselName}"
                    android:textColor="@color/SaDarkGray"
                    android:layout_gravity="center_horizontal|left"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/pt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/date_pt"
                    android:textColor="@color/SaLightGreen"
                    android:textSize="@dimen/list_card_tv_size"
                    />

                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="4dp"
                    android:ems="7"
                    android:textAlignment="center"
                    android:textColor="@color/SaDarkGray"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/pt_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_pt"
                    android:textColor="@color/SaLightGreen"
                    android:textSize="@dimen/list_card_tv_size" />

                <TextView
                    android:id="@+id/time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="4dp"
                    android:ems="7"
                    android:textAlignment="center"
                    android:textColor="@color/SaDarkGray"

                    />
            </LinearLayout>


            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_border"
                android:paddingStart="10dp"
                android:paddingRight="15dp"
                android:textColor="@color/SaDarkGray"
                android:textSize="15sp"
                />




        </LinearLayout>


    </androidx.cardview.widget.CardView>
</layout>
